--- a/assets/scss/user-selector.scss
+++ b/assets/scss/user-selector.scss
@@ -7,6 +7,7 @@
 
 .kvm-user-token {
 	display: inline-block;
+	text-align: start;
 }
 
 .kvm-user-token-wrapper {
@@ -16,4 +17,9 @@
 	gap: 1em;
 	justify-content: flex-start;
 	align-items: flex-start;
+
+	.components-button {
+		height: auto !important;
+		white-space: pre-wrap;
+	}
 }
